# ESP32-Solar-Inverter-Battery-Management

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/c_font/: CMakeLists.txt  ui_font_big.c  ui_font_icon.c  ui_font_medium.c  ui_font_percent.c  ui_font_small.c
components/c_image/: ui_img_battery.c  ui_img_bg.c  ui_img_cbg.c  ui_img_corner.c  ui_img_flash.c  ui_img_line.c  ui_img_lotus.c  ui_img_select.c  ui_img_voltage.c
components/gamo_wlan/: CMakeLists.txt  gamo_http_client.cpp  gamo_http_client.h  gamo_wlan.cpp  gamo_wlan.h
components/lvgl/lvgl/src/lv_core/: lv_obj.c
components/lvgl_esp32_drivers/lvgl_touch/: xpt2046.c
main/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  main.h  mqtt.cpp  mqtt.h  nvs.cpp  nvs.h  relay.cpp  relay.h  ui.cpp  ui.h  ui_helpers.cpp  ui_helpers.h
